--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 class="TituloIndex">Calculadora</h1>
+        <h1 class="TituloIndex">Prueba Calculadora</h1>
     </header>
 
     <main class="contenedorCalculadora">
@@ -20,38 +20,34 @@
         </div>
 
         <div class="filaSuperior">
-            <!--Limpiar Borrar Resultado-->
-            <div class="limpiar">C</div>
-            <div class="borrar">Borrar</div>
-            <div class="calcular">=</div>
+            <div class="limpiar" onclick="limpiarPantalla()">C</div>
+            <div class="borrar" onclick="borrarUltimoDigito()">Borrar</div>
+            <div class="calcular" onclick="calcular()">=</div>
         </div>
 
         <div class="filaNumeros">
-            <!--7 8 9 Dividir-->
-            <div class="numero7">7</div>
-            <div class="numero8">8</div>
-            <div class="numero9">9</div>
-            <div class="dividir">/</div>
+            <div class="numero7" onclick="agregarNumero('7')">7</div>
+            <div class="numero8" onclick="agregarNumero('8')">8</div>
+            <div class="numero9" onclick="agregarNumero('9')">9</div>
+            <div class="dividir" onclick="asignarOperador('/')">/</div>
         </div>
 
         <div class="filaNumeros">
-            <div class="numero4">4</div>
-            <div class="numero5">5</div>
-            <div class="numero6">6</div>
-            <div class="multiplicar">*</div>
+            <div class="numero4" onclick="agregarNumero('4')">4</div>
+            <div class="numero5" onclick="agregarNumero('5')">5</div>
+            <div class="numero6" onclick="agregarNumero('6')">6</div>
+            <div class="multiplicar" onclick="asignarOperador('*')">*</div>
         </div>
 
         <div class="filaNumeros">
-            <!--1 2 3 Restar-->
-            <div class="numero1">1</div>
-            <div class="numero2">2</div>
-            <div class="numero3">3</div>
-            <div class="resta">-</div>
+            <div class="numero1" onclick="agregarNumero('1')">1</div>
+            <div class="numero2" onclick="agregarNumero('2')">2</div>
+            <div class="numero3" onclick="agregarNumero('3')">3</div>
+            <div class="resta" onclick="asignarOperador('-')">-</div>
         </div>
 
         <div class="filaInferior">
-            <!--0 . Suma-->
-            <div class="numero0">0</div>
+            <div class="numero0" onclick="agregarNumero('0')">0</div>
             <div class="puntodecimal">.</div>
             <div class="suma">+</div>
         </div>
