Se agrego el logo de la app

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link rel="stylesheet" href="/CalculadoraFuncional/css/estilos.css">
-    <link rel="icon" href="" type="image/x-icon">
+    <link rel="icon" href="/CalculadoraFuncional/img/calculadora.ico">
 </head>
 <body>
     <header>
