Empezamos a crear las funciones en JavaScript

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 
     <main class="contenedorCalculadora">
         <div class="resultado">
-            <input type="text" class="pantalla">
+            <input type="text" class="pantalla" readonly>
         </div>
 
         <div class="filaSuperior">
