Se ajustaron valores en el html

--- a/html/index.html
+++ b/html/index.html
@@ -24,9 +24,9 @@
         </div>
 
         <div class="filaNumeros">
-            <div class="numero7" onclick="agregarNumero('7')">7</div>
-            <div class="numero8" onclick="agregarNumero('8')">8</div>
-            <div class="numero9" onclick="agregarNumero('9')">9</div>
+            <div class="numero7" onclick="agregarNumero(7)">7</div>
+            <div class="numero8" onclick="agregarNumero(8)">8</div>
+            <div class="numero9" onclick="agregarNumero(9)">9</div>
             <div class="dividir" onclick="asignarOperador('/')">/</div>
         </div>
 
