se terminaron las funciones, esta corriendo adecuadamente

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
 
         <div class="filaSuperior">
             <div class="funciones" onclick="limpiarPantalla()">C</div>
-            <div class="funciones" onclick="borrarUltimoDigito()">Borrar</div>
+            <div class="funciones" onclick="borrarUltimodigito()">Borrar</div>
             <div class="funciones" onclick="calcular()">=</div>
         </div>
 
@@ -46,7 +46,7 @@
 
         <div class="filaInferior">
             <div class="numeros" onclick="agregarNumero('0')">0</div>
-            <div class="punto" onclick="agregarPunto('.')">.</div>
+            <div class="punto" onclick="agregarPunto()">.</div>
             <div class="operador" onclick="asignarOperador('+')">+</div>
         </div>
     </main>
